--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,8 +12,10 @@
 
       {{ item.description }}
 
+
       <!-- Здесь парсинг даты полученной с базы -->
       <p class="date">Запись от: {{item.datecreate.seconds*1000 | date: "fullDate"}}</p>
+      <p><a href="http://">КОД ЗДЕСЬ</a></p>
     </div>
   </main>
   <div class="probel"></div>
