--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,7 +15,7 @@
 
       <!-- Здесь парсинг даты полученной с базы -->
       <p class="date">Запись от: {{item.datecreate.seconds*1000 | date: "fullDate"}}</p>
-      <p><a href="http://">КОД ЗДЕСЬ</a></p>
+      <p><a href="https://github.com/a374ru/firestore-a">КОД ЗДЕСЬ</a></p>
     </div>
   </main>
   <div class="probel"></div>
