--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,8 +18,8 @@
       <form action="https://github.com/a374ru/firestore-a#readme" target="_blank"><button>Github code</button></form>
     </div>
   </main>
-  <div class="probel"></div>
+  <!-- <div class="probel"></div> -->
+  <footer class="f">
+    YS©TM
+  </footer>
 </section>
-<footer class="f">
-  YS©TM
-</footer>
