--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,21 +1,22 @@
 @import '../styles.scss';
 
 .connect {
-  color: #cccccc99;
+  color: $braun-a374
 }
 
 // :host {}
 
 section {
   display: grid;
-  grid-template: auto auto 11rem 1fr / auto auto auto;
+  grid-template: auto auto 1fr 1fr 1fr / auto auto auto;
   // grid-template-rows: auto 1fr auto auto;
   grid-template-columns: 0.1fr 1fr 0.1fr;
   grid-template-areas:
     ". a ."
     ". b ."
     ". . ."
-    // "f f f"
+    ". . ."
+    "f f f"
 }
 
 main {
@@ -24,7 +25,7 @@ main {
 
 .text {
   padding-left: 1em;
-
+  width: clamp(270px, 90%, 700px);
   font-size: x-large;
 }
 
@@ -45,7 +46,7 @@ h1 {
   display: grid;
   align-content: center;
   grid-area: f;
-  height: 100px;
+  height: 110px;
   background-color: #fce5cc55;
   color: rgb(79, 61, 24);
   text-align: center;
