roughly correct design

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,7 +14,7 @@ html {
 }
 
 body {
-
+  height: 100vh;
   margin: 0;
   background-color: $bg-a374;
   background-image: url('./assets/bg.svg');
@@ -40,18 +40,9 @@ a:visited {
   text-decoration: none;
 }
 
-button {
-  color: $blue-a374;
-  text-decoration: none;
-  background-color: #fff9f9;
-  transform: rotate(-7deg);
-  box-shadow: 0px 3px 44px #f1cbcb;
-  border-radius: 7px;
-  border-color: #ebebeb;
-  margin-top: 3em;
-}
 
-@media screen and (max-width: 425px) {
+
+@media screen and (max-width: 525px) {
 
   body {
     background-image: none;
