--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,11 +4,12 @@
   color: $braun-a374
 }
 
-// :host {}
+
 
 section {
+  height: 100%;
   display: grid;
-  grid-template: auto auto 1fr 1fr 1fr / auto auto auto;
+  grid-template: auto 1fr 1fr / auto auto auto;
   // grid-template-rows: auto 1fr auto auto;
   grid-template-columns: 0.1fr 1fr 0.1fr;
   grid-template-areas:
@@ -17,16 +18,29 @@ section {
     ". . ."
     ". . ."
     "f f f"
+  ;
+
 }
 
 main {
   grid-area: b;
 }
 
+form {
+  margin-top: -1.3em;
+}
+
 .text {
-  padding-left: 1em;
-  width: clamp(270px, 90%, 700px);
+  padding: 3% 3% 6% 3%;
+  width: clamp(270px, 95%, 900px);
   font-size: x-large;
+  box-shadow: 0px 2px 17px #00000033;
+  margin-bottom: 3rem;
+  // background-color: #fff;
+  -webkit-backdrop-filter: blur(7px);
+  backdrop-filter: blur(7px);
+  background: rgba(235, 224, 224, 0.263);
+
 }
 
 h1 {
@@ -46,19 +60,37 @@ h1 {
   display: grid;
   align-content: center;
   grid-area: f;
-  height: 110px;
-  background-color: #fce5cc55;
+  height: 100px;
+  background-color: #84743733;
   color: rgb(79, 61, 24);
-  text-align: center;
+  padding: 0px 50px;
+  text-align: right;
+  -webkit-backdrop-filter: blur(12px);
+  backdrop-filter: blur(12px);
+}
+
+button {
+  color: $blue-a374;
+  text-decoration: none;
+  background-color: #fff9f9;
+  transform: rotate(-0deg);
+  box-shadow: 0px 3px 44px #f1cbcb;
+  border-radius: 7px;
+  border-color: #ebebeb;
+  margin-top: 3em;
+  font-size: 1.5rem;
 }
 
 @media screen and (max-width: 425px) {
 
-  body {
-    background-image: none;
+  .text {
+    padding: 0.2em 0.2em 0.2em 0.5em;
+    box-shadow: none;
+    margin-left: 0em;
   }
 
-  .text {
-    padding-left: 0px;
+  section {
+    grid-template-columns: 20px 1fr 0.1fr;
+
   }
 }
